# Transactional-Data-ETL

./: .gitignore  .python-version  Dockerfile  Dockerfile.test  README  docker-compose.yml  init.sql  pyproject.toml  supervisord.conf
orquestrador/: Dockerfile.airflow  docker_requirements.txt
orquestrador/dags/: dag_dummy.py
pyspark_pipelines/: Dockerfile.spark
pyspark_pipelines/core/client/: __init__.py  spark_client.py
pyspark_pipelines/core/io/: SQLInput.py
pyspark_pipelines/pipelines/: dummy_pipeline.py
tests/: conftest.py
tests/unit/core/client/: test_spark_session.py
utils/: faker_script.py
