[tool.poetry]
name = "pyspark-airflow"
version = "0.1.0"
description = "Projeto de exemplo com diversas dependências"
authors = ["Mayara Machado <may.mchdo@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^12.0.1"
Flask = "^2.1.1"
boto3 = "^1.20.32"
apache-airflow = "^2.2.3"
pyspark = "^3.1.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
moto = "^2.2.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
